--- a/PmQL/appsettings.json
+++ b/PmQL/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=your_server;Database=ElectricityData;Trusted_Connection=True;"
+  }
 }
